@@ -27,6 +27,8 @@ extern "C" {
 
 int32_t assemble_ipmi_rmcpplus_pkt (u_int8_t authentication_algorithm, u_int8_t integrity_algorithm, u_int8_t confidentiality_algorithm, u_int8_t *integrity_key, u_int32_t integrity_key_len, u_int8_t *confidentiality_key, u_int32_t confidentiality_key_len, fiid_obj_t obj_hdr_rmcp, fiid_obj_t obj_rmcpplus_hdr_session, fiid_obj_t obj_msg_hdr, fiid_obj_t obj_cmd, fiid_template_t tmpl_cmd, fiid_obj_t obj_rmcpplus_trlr_session, fiid_template_t tmpl_trlr_session, u_int8_t *pkt, u_int32_t pkt_len);
 
+int32_t unassemble_ipmi_rmcpplus_pkt (u_int8_t authentication_algorithm, u_int8_t integrity_algorithm, u_int8_t confidentiality_algorithm, u_int8_t *integrity_key, u_int32_t integrity_key_len, u_int8_t *confidentiality_key, u_int32_t confidentiality_key_len, u_int8_t *pkt, u_int32_t pkt_len, fiid_obj_t obj_hdr_rmcp, fiid_obj_t obj_rmcpplus_hdr_session, fiid_obj_t obj_msg_hdr, fiid_obj_t obj_cmd, fiid_obj_t obj_msg_trlr, fiid_template_t tmpl_cmd, fiid_obj_t obj_rmcpplus_trlr_session, fiid_template_t tmpl_trlr_session);
+
 #ifdef __cplusplus
 }
 #endif
